<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#04B4AE">


    <ListView
        android:id="@+id/listViewFromDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_text"
        android:layout_below="@+id/btnAdd"
        android:background="#99FFFFFF">

    </ListView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/etHintSearch"
        android:layout_toLeftOf="@+id/btnSearch"
        android:layout_toStartOf="@+id/btnSearch"
        android:inputType="text|textNoSuggestions"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSearchStr"
        android:id="@+id/btnSearch"
        android:layout_alignTop="@+id/search_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick_Search" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddStr" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick_ClearAll"
        android:text="@string/btnClearStr"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRefreshStr"
        android:id="@+id/button"
        android:layout_above="@+id/listViewFromDB"
        android:layout_centerHorizontal="true"
        android:onClick="onClick_Refresh"/>


</RelativeLayout>